grids y full responsive

--- a/Formulario.html
+++ b/Formulario.html
@@ -22,47 +22,57 @@
                 <div></div>
             </nav>
         </header>
-    <main>
+    <main class="formulario">
         <form  >
-            <div class="formulario">
+            <div >
                 <ol class="formularioLista">
                     <li >
                         <div>
                             <label for="gusto">¿Te gusto el blog?</label>
                         </div>
-                        <p>SI</p>
+                        <div>
+                            <p>SI</p>
                         <input type="radio" name="gusto" id="" value="SI">
                         <p>NO</p>
                         <input type="radio" name="gusto" id=""value="NO">
+                        </div>
+                        
                     </li>
                     <li >
                         <div>
                             <label for="sencillo">¿el contenido te parecio sencillo?</label>
                         </div>
-                        <p>SI</p>
-                        <input type="radio" name="sencillo" id="" value="SI">
+                        <div>
+                            <p>SI</p>
+                        <input type="radio" name="gusto" id="" value="SI">
                         <p>NO</p>
-                        <input type="radio" name="sencillo" id=""value="NO">
+                        <input type="radio" name="gusto" id=""value="NO">
+                        </div>
                     </li>
                     <li > 
                         <div>
                             <label for="contenido">¿Quisieras mas contenido asi?</label>
                         </div>
-                        <p>SI</p>
-                        <input type="radio" name="contenido" id="" value="SI">
+                        <div>
+                            <p>SI</p>
+                        <input type="radio" name="gusto" id="" value="SI">
                         <p>NO</p>
-                        <input type="radio" name="contenido" id=""value="NO">
+                        <input type="radio" name="gusto" id=""value="NO">
+                        </div>
                     </li>
                     <li >
                         <div>
                             <label for="aportes">¿Faltan algunas cosas?</label>
                         </div> 
-                        <p>Muchas</p>
+                        <div>
+                            <p>Muchas</p>
                         <input type="radio" name="aportes" id="" value="SI">
                         <p>No muchas</p>
                         <input type="radio" name="aportes" id=""value="NO">
                         <p>Ninguna</p>
                         <input type="radio" name="aportes" id=""value="NO">
+                        </div>
+                        
                 </li>
                 </ol>
 
