--- a/contacto.html
+++ b/contacto.html
@@ -24,10 +24,10 @@
                 <div></div>
             </nav>
         </header>
-        <main>
+        <main class="contacto">
 
 
-            <h3 class="t1"> Este es mi contacto</h3>
+            <h3> Este es mi contacto</h3>
             <table class="tabla">
                 <tr>
                     <th>Facebook
